# xmpp-proxy

./: .gitattributes  .gitignore  .rustfmt.nightly.toml  Cargo.toml  README.md  build.rs  check-all-features.sh  deny.toml  xmpp-proxy.toml
.ci/: Jenkinsfile  build.sh
.helix/: config.toml
contrib/: posh.sh
contrib/host-meta/: rfc6415.but-valid.xml  rfc6415.json  rfc6415.xml  xep-0156-current.json  xep-0156-current.xml  xep-0156-minimal.json  xep-0156-proposed-minimal.json  xep-0156-proposed.json  xml-validate.sh
contrib/prosody-modules/: mod_net_proxy.lua  mod_s2s_outgoing_proxy.lua  mod_secure_interfaces.lua
contrib/systemd/: xmpp-proxy.service
fuzz/: Cargo.toml
fuzz/in/: 2.xml  3.xml  4.xml  5.xml  6.xml  7.xml
fuzz/src/: main.rs
integration/: Dockerfile  juliet_messages_romeo.scs  juliet_presence.scs  named.conf  romeo_messages_juliet.scs  romeo_presence.scs  test.sh
integration/00-no-tls/: example.org.zone  prosody1.cfg.lua
integration/01-starttls/: prosody1.cfg.lua
integration/03-client-srv-record-starttls/: example.org.zone  prosody1.cfg.lua
integration/04-client-a-record-tls/: example.org.zone  prosody1.cfg.lua
integration/05-client-srv-record-tls/: example.org.zone  prosody1.cfg.lua
integration/06-client-websocket/: example.org.zone  prosody1.cfg.lua
integration/07-c2s-starttls/: example.org.zone  xmpp-proxy1.toml
integration/08-c2s-tls/: xmpp-proxy1.toml
integration/09-c2s-a-record-quic/: prosody1.cfg.lua  xmpp-proxy1.toml
integration/10-client-srv-record-quic/: example.org.zone  xmpp-proxy1.toml
integration/11-c2s-websocket/: example.org.zone  prosody1.cfg.lua  xmpp-proxy1.toml
integration/12-s2s-a-record-starttls/: example.org.zone  xmpp-proxy1.toml  xmpp-proxy2.toml
integration/13-s2s-srv-record-starttls/: example.org.zone  prosody1.cfg.lua  prosody2.cfg.lua
integration/14-s2s-a-record-tls/: prosody2.cfg.lua  xmpp-proxy1.toml  xmpp-proxy2.toml
integration/15-s2s-srv-record-tls/: example.org.zone  xmpp-proxy1.toml  xmpp-proxy2.toml
integration/16-s2s-a-record-quic/: prosody2.cfg.lua  xmpp-proxy1.toml  xmpp-proxy2.toml
integration/17-s2s-srv-record-quic/: example.org.zone  xmpp-proxy1.toml  xmpp-proxy2.toml
integration/18-s2s-websocket/: example.org.zone  prosody1.cfg.lua  xmpp-proxy1.toml  xmpp-proxy2.toml  xmpp-proxy3.toml
integration/19-client-websocket-host-meta/: nginx1.conf  prosody1.cfg.lua
integration/20-client-websocket-host-meta-json/: example.org.zone  nginx1.conf  prosody1.cfg.lua  xmpp-proxy1.toml
integration/21-c2s-websocket-host-meta/: example.org.zone  nginx1.conf  xmpp-proxy1.toml
integration/22-c2s-websocket-host-meta-json/: nginx1.conf  prosody1.cfg.lua
integration/23-s2s-websocket-host-meta/: example.org.zone  nginx1.conf  nginx2.conf
integration/24-s2s-websocket-host-meta-json/: nginx1.conf  nginx2.conf  prosody1.cfg.lua  xmpp-proxy1.toml  xmpp-proxy2.toml
integration/25-s2s-sasl-external/: example.org.zone  prosody2.cfg.lua  tests  xmpp-proxy1.toml
integration/27-s2s-prosody-ejabberd/: ejabberd2.yml  example.org.zone  prosody1.cfg.lua
integration/28-s2s-srv-record-starttls-no-outgoing/: example.org.zone  prosody1.cfg.lua  prosody2.cfg.lua  xmpp-proxy1.toml  xmpp-proxy2.toml
integration/29-webtransport-host-meta-json/: nginx1.conf  nginx2.conf  xmpp-proxy1.toml  xmpp-proxy2.toml  xmpp-proxy3.toml
src/: context.rs  in_out.rs  lib.rs  main.rs  outgoing.rs  quic.rs  slicesubsequence.rs  srv.rs  stanzafilter.rs  systemd.rs  tls.rs  tokio_xmpp.rs  verify.rs  websocket.rs
src/common/: ca_roots.rs  certs_key.rs  incoming.rs  mod.rs  outgoing.rs  stream_listener.rs
src/quic/: incoming.rs  mod.rs  outgoing.rs  unix_datagram.rs
src/tls/: incoming.rs  mod.rs  outgoing.rs
src/websocket/: incoming.rs  mod.rs  outgoing.rs
src/webtransport/: incoming.rs  outgoing.rs
