[package]
name = "fuzz"
version = "0.1.0"
authors = ["moparisthebest <admin@moparisthebest.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
afl = "0.17"
xmpp-proxy = { path = "..", default-features = false, features = [] }
tokio = { version = "1.48", features = ["net", "rt", "rt-multi-thread", "macros", "io-util"] }
sha256 = "1.6"
rxml = "0.13"
